// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput should be rendered correctly 1`] = `
<label
  className="container root size-18 color-sky theme-light -clickable"
>
  <div
    className="uui-radioinput uui-checked"
  >
    <input
      aria-checked={true}
      checked={true}
      onChange={[Function]}
      type="radio"
    />
    <div
      className="container uui-icon uui-enabled circle"
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
</label>
`;

exports[`RadioInput should be rendered correctly with new props 1`] = `
<label
  className="container root size-12 color-sun theme-dark -clickable"
>
  <div
    className="uui-radioinput uui-checked"
  >
    <input
      aria-checked={true}
      checked={true}
      onChange={[Function]}
      type="radio"
    />
    <div
      className="container uui-icon uui-enabled circle"
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
  <div
    className="uui-input-label"
  >
    open
  </div>
</label>
`;
